--- a/influcid-RS/index.html
+++ b/influcid-RS/index.html
@@ -169,7 +169,7 @@
         <div class="block-5__container">
           <div class="container__subcontainer">
             <p>
-              <b>Deca do 12 godina:</b> po1 tabletu na svaka 2 sata do poboljšanja stanja, a najviše 8 tableta dnevno. U nastavku terapije treba uzimati po 1 tabletu 3 puta na dan.
+              <b>Deca do 12 godina:</b> po 1 tabletu na svaka 2 sata do poboljšanja stanja, a najviše 8 tableta dnevno. U nastavku terapije treba uzimati po 1 tabletu 3 puta na dan.
             </p>
             <div class="subcontainer">
               <div class="subcontainer-particle-1">
@@ -186,7 +186,7 @@
                   NASTAVAK TERAPIJE<br />
                 </b>
                 <b class="subtext">Do ozdravljenja</b>
-                <p>Po jednu tabletu 3 puta na dan</p>
+                <p>po jednu tabletu 3 puta na dan</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -203,7 +203,7 @@
               <div class="subcontainer-particle-1">
                 <b>PRVI DANI</b>
                 <b class="subtext">Na sat vremena</b>
-                <p>Po jednu tabletu</p>
+                <p>po jednu tabletu</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -213,8 +213,8 @@
                 <b>
                   U NASTAVKU<br />TERAPIJE
                 </b>
-                <b class="subtext">do ozdravljenja</b>
-                <p>Po jednu tabletu 3 puta na dan</p>
+                <b class="subtext">Do ozdravljenja</b>
+                <p>po jednu tabletu 3 puta na dan</p>
               </div>
               <div class="subcontainer-particle-2">
                 <div class="clock-img"></div>
@@ -406,8 +406,8 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
               </div>
               <button class="accordion">read more</button>
               <div class="panel">
-                <p>Najveći broj prehlada se javlja kod dece od 6 mesca do 12 godine, u periodu intenzivnog razvoja imunog sistema. 
-                    Za efikasno lečenje prehalde i drugih virusnih infekcija disajnih puteva potrebna je brza reakcija. Bitno je prepoznati prve simptome:</p>
+                <p>Najveći broj prehlada se javlja kod dece od 6. meseca do 12 godine, u periodu intenzivnog razvoja imunog sistema. 
+                    Za efikasno lečenje prehlade i drugih virusnih infekcija disajnih puteva potrebna je brza reakcija. Bitno je prepoznati prve simptome:</p>
 
                   <div class="panel__checklist">
                   <p>dete se ne oseća dobro, žali se na glavobolju;</p>
@@ -418,7 +418,7 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
                   <p>ubrzo se javlja groznica;</p>
                   <p>počinje da curi nos – prvo se javlja bistra sekrecija iz nosa, može doći i do slivanja niz grlo, kasnije osećaj zapušenog nosa, kijavica;¹</p>
                 </div>
-                <p>U sezoni prelade i gripa potrebno je koliko god je moguće delovati na imunitet deteta kako se ne bi razbolelo ili, ako je došlo do bolesti, kako bi brže ozdravilo. Kako do rešenja? 
+                <p>U sezoni prehlade i gripa potrebno je koliko god je moguće delovati na imunitet deteta kako se ne bi razbolelo ili, ako je došlo do bolesti, kako bi brže ozdravilo. Kako do rešenja? 
                 Bitno nam je da za decu želimo samo prirodne i proverene preparate.</p>
                 <p class="panel__accent-text">Influcid je Vaš isparavan izbor za prehladu i grip.</p>
                 <p>Nemački lek Influcid jača imuni sistem i podstiče oporavak. 
@@ -456,11 +456,10 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
             <!--              <li> Продажі в упаковках препаратів Цетрарії ісландської (ісландського моху) за період 2015-2019 роки (2019 -3 квартали) згідно даних роздібного аудиту    Sale Out Системи дослідження фармацевтичного ринку «Фармексплорер» </li>-->
             <!--            </ol>-->
             <p>
-              Nosilac dozvole i proizvođač
+            
               Nosilac dozvole:
               ALPEN PHARMA DOO BEOGRAD (PALILULA)
               Ilirska 5, Beograd
-              5 od 5
               <br>
               Proizvođač:
               DEUTSCHE HOMOOPATHIE-UNION DHU-ARZNEIMITTEL GMBH + CO. KG
