--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<a href="influcid-BY/index.html">influcid-BY</a>
 			<a href="influcid-AZ/index.html">influcid-AZ</a>
 			<a href="influcid-KZ/index.html">influcid-KZ</a>
+			<a href="AlphaPharmaceutical/index.html">AlphaPharmaceutical</a>
 		</section>
 	</main>
 
@@ -135,6 +136,9 @@
 	}
 	a:nth-child(23)::before {
 		background: url("./influcid-KZ/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(24)::before {
+		background: url("./AlphaPharmaceutical/bg.png")no-repeat center / cover;
 	}
 </style>
 
