--- a/AlphaPharmaceutical/index-ru.html
+++ b/AlphaPharmaceutical/index-ru.html
@@ -62,7 +62,7 @@
 <div class="header-container">
     <div class="header-title">
         <h1>ВАШ ФАРМАЦЕВТИЧЕСКИЙ<br>
-            БИЗНЕС НАВИГАТОР</h1>
+            БИЗНЕС<br> НАВИГАТОР</h1>
     </div>
     <div class="header-text">
         <p>Альфавизор в сфере международного консалтинга для крупных фармацевтических игроков.</p>
