--- a/AlphaPharmaceutical/index-en.html
+++ b/AlphaPharmaceutical/index-en.html
@@ -17,9 +17,9 @@
     <div class="navigation-container">
         <div class="logo-container"></div>
         <div class="navigation-menu">
-            <a class="navmenu" href="#block-1" >УСЛУГИ</a>
-            <a class="navmenu" href="#block-2">ПРЕИМУЩЕСТВА</a>
-            <a class="navmenu" href="#block-3">КОНТАКТЫ</a>
+            <a class="navmenu" href="#block-1" >SERVICES</a>
+            <a class="navmenu" href="#block-2">Benefits</a>
+            <a class="navmenu" href="#block-3">Contacts</a>
         </div>
         <div class="navigation-lang">
             <a class="navlang active-lang" href="index-en.html">EN /</a>
@@ -34,13 +34,13 @@
                 <input type="checkbox" /> <span></span> <span></span> <span></span>
                 <ul id="menu">
                     <li>
-                        <a class="navmenu" href="#block-1" >УСЛУГИ</a>
+                        <a class="navmenu" href="#block-1" >SERVICES</a>
                     </li>
                     <li>
-                        <a class="navmenu" href="#block-2">ПРЕИМУЩЕСТВА</a>
+                        <a class="navmenu" href="#block-2">Benefits</a>
                     </li>
                     <li>
-                        <a class="navmenu" href="#block-3">КОНТАКТЫ</a>
+                        <a class="navmenu" href="#block-3">Contacts</a>
                     </li>
                     <li>
                         <a class="navlang active-lang" href="index-en.html">EN /</a>
