--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -17,9 +17,9 @@
     <div class="navigation-container">
         <div class="logo-container"></div>
         <div class="navigation-menu">
-            <a class="navmenu" href="#block-1" >УСЛУГИ</a>
-            <a class="navmenu" href="#block-2">ПРЕИМУЩЕСТВА</a>
-            <a class="navmenu" href="#block-3">КОНТАКТЫ</a>
+            <a class="navmenu" href="#block-1" >USŁUGI</a>
+            <a class="navmenu" href="#block-2">Korzyści</a>
+            <a class="navmenu" href="#block-3">Formularz</a>
         </div>
         <div class="navigation-lang">
             <a class="navlang" href="index-en.html">EN /</a>
@@ -34,13 +34,13 @@
                 <input type="checkbox" /> <span></span> <span></span> <span></span>
                 <ul id="menu">
                     <li>
-                        <a class="navmenu" href="#block-1" >УСЛУГИ</a>
+                        <a class="navmenu" href="#block-1" >USŁUGI</a>
                     </li>
                     <li>
-                        <a class="navmenu" href="#block-2">ПРЕИМУЩЕСТВА</a>
+                        <a class="navmenu" href="#block-2">Korzyści</a>
                     </li>
                     <li>
-                        <a class="navmenu" href="#block-3">КОНТАКТЫ</a>
+                        <a class="navmenu" href="#block-3">Formularz</a>
                     </li>
                     <li>
                         <a class="navlang" href="index-en.html">EN /</a>
