--- a/AlphaPharmaceutical/index-en.html
+++ b/AlphaPharmaceutical/index-en.html
@@ -22,8 +22,8 @@
             <a class="navmenu" href="#block-3">Contacts</a>
         </div>
         <div class="navigation-lang">
-            <a class="navlang active-lang" href="index-en.html">EN /</a>
             <a class="navlang" href="index.html">PL /</a>
+            <a class="navlang active-lang"  href="index-en.html">EN /</a>
             <a class="navlang" href="index-ru.html">RU</a>
         </div>
 
@@ -43,10 +43,10 @@
                         <a class="navmenu" href="#block-3">Contacts</a>
                     </li>
                     <li>
-                        <a class="navlang active-lang" href="index-en.html">EN /</a>
+                        <a class="navlang" href="index.html">PL /</a>
                     </li>
                     <li>
-                        <a class="navlang" href="index.html">PL /</a>
+                        <a class="navlang active-lang"  href="index-en.html">EN /</a>
                     </li>
                     <li>
                         <a class="navlang" href="index-ru.html">RU</a>
@@ -245,17 +245,17 @@
         <div class="footer-block1"></div>
         <div class="footer-block2"></div>
         <div class="footer-block3">
-            <p>ул. Пиренейская 9 оф. 28<br>
-                01 493 Варшава</p>
+            <p>St. Pirenejska 9 office 28<br>
+                01493 Warsaw</p>
         </div>
         <div class="footer-block4">
-            <p>Телефон :<br>
+            <p>tel:<br>
                 +48 602 655 305</p>
         </div>
         <div class="footer-block-mobile">
-            <p>ул. Пиренейская 9 оф. 28<br>
-                01 493 Варшава</p>
-            <p>Телефон :<br>
+            <p>St. Pirenejska 9 office 28<br>
+                01493 Warsaw</p>
+            <p>tel:<br>
                 +48 602 655 305</p>
         </div>
     </div>
