--- a/AlphaPharmaceutical/index-en.html
+++ b/AlphaPharmaceutical/index-en.html
@@ -88,20 +88,19 @@
         <div class="block-1-plates">
             <div class="plate keybtn1">
                 <div class="plate-image plate-image1"></div>
-                <p>Market <br> research</p>
+                <p>Market<br>research</p>
             </div>
             <div class="plate keybtn2 keybtn2-active">
                 <div class="plate-image plate-image2"></div>
-                <p>Business <br> assistance <br> 360°</p>
+                <p>Business <br>assistance <br>360°</p>
             </div>
             <div class="plate keybtn3">
                 <div class="plate-image plate-image3"></div>
-                <p>Registration<br> of pharmaceutical<br> products</p>
+                <p>Registration<br>of pharmaceutical<br>products</p>
             </div>
             <div class="plate keybtn4">
                 <div class="plate-image plate-image4"></div>
-                <p>Sales<br> of medicinal<br>
-                    products, API</p>
+                <p>Sales<br>of medicinal<br>products, API</p>
             </div>
         </div>
         <div class="block-1-text">
