--- a/AlphaPharmaceutical/index-ru.html
+++ b/AlphaPharmaceutical/index-ru.html
@@ -88,20 +88,19 @@
         <div class="block-1-plates">
             <div class="plate keybtn1">
                 <div class="plate-image plate-image1"></div>
-                <p>Исследование <br> конъюнктуры<br>  рынка</p>
+                <p>Исследование <br>конъюнктуры<br>рынка</p>
             </div>
             <div class="plate keybtn2 keybtn2-active">
                 <div class="plate-image plate-image2"></div>
-                <p>Бизнес <br> сопровождение <br> 360°</p>
+                <p>Бизнес <br>сопровождение <br>360°</p>
             </div>
             <div class="plate keybtn3">
                 <div class="plate-image plate-image3"></div>
-                <p>Регистрация<br> фармацевтических<br> продуктов</p>
+                <p>Регистрация<br>фармацевтических<br>продуктов</p>
             </div>
             <div class="plate keybtn4">
                 <div class="plate-image plate-image4"></div>
-                <p>Продажа<br> лекарственных<br>
-                    средств, АФИ</p>
+                <p>Продажа<br>лекарственных<br>средств, АФИ</p>
             </div>
         </div>
         <div class="block-1-text">
