--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -89,20 +89,19 @@
             <div class="block-1-plates">
                 <div class="plate keybtn1">
                     <div class="plate-image plate-image1"></div>
-                    <p>Badanie   <br> koniunktury<br>  rynkowej</p>
+                    <p>Badanie<br>koniunktury<br>rynkowej</p>
                 </div>
                 <div class="plate keybtn2 keybtn2-active">
                     <div class="plate-image plate-image2"></div>
-                    <p>Asysta  <br> biznesowa <br> 360°</p>
+                    <p>Asysta<br>biznesowa <br>360°</p>
                 </div>
                 <div class="plate keybtn3">
                     <div class="plate-image plate-image3"></div>
-                    <p>Rejestracja<br> produktów<br> farmaceutycznych</p>
+                    <p>Rejestracja<br>produktów<br>farmaceutycznych</p>
                 </div>
                 <div class="plate keybtn4">
                     <div class="plate-image plate-image4"></div>
-                    <p>Sprzedaż<br> środków<br>
-                        leczniczych, API</p>
+                    <p>Sprzedaż<br>środków<br>leczniczych, API</p>
                 </div>
             </div>
             <div class="block-1-text">
