--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -66,7 +66,7 @@
                  NAWIGATOR BIZNESOWY </h1>
         </div>
         <div class="header-text">
-            <p>Альфавизор(?) w sferze międzynarodowego doradztwa dla głównych graczy farmaceutycznych.</p>
+            <p>Alphavisor w sferze międzynarodowego doradztwa dla głównych graczy farmaceutycznych.</p>
             <p>Personalny asystent Twojego biznesu.</p>
         </div>
     </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="plate keybtn2 keybtn2-active">
                     <div class="plate-image plate-image2"></div>
-                    <p>Asysta<br>biznesowa <br>360°</p>
+                    <p>Asysta<br>biznesowa<br>360°</p>
                 </div>
                 <div class="plate keybtn3">
                     <div class="plate-image plate-image3"></div>
