--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<a href="influcid-AZ/index.html">influcid-AZ</a>
 			<a href="influcid-KZ/index.html">influcid-KZ</a>
 			<a href="AlphaPharmaceutical/index.html">AlphaPharmaceutical</a>
+			<a href="influcid-MN/index.html">influcid-MN</a>
 		</section>
 	</main>
 
@@ -139,6 +140,9 @@
 	}
 	a:nth-child(24)::before {
 		background: url("./AlphaPharmaceutical/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(25)::before {
+		background: url("./influcid-MN/bg.png")no-repeat center / cover;
 	}
 </style>
 
