--- a/bioelektra/index-pre.html
+++ b/bioelektra/index-pre.html
@@ -81,9 +81,11 @@
         <div class="block-2__plate">Зручно приймати: лише 1 раз на день<sup>1</sup></div>
         <div class="block-2__plate">Смачно! Має 2 смаки: апельсиновий, лимонний<sup>1</sup></div>
         <div class="block-2__plate">Можна приймати хворим на цукровий діабет<sup>1</sup></div>
+        <a name="koly-prymaty"></a>
     </div>
+
 </div>
-<a name="block1"></a>
+
 
 <div class="block block-3">
     <div class="block-3__container">
@@ -118,6 +120,7 @@
             </div>
         </div>
     </div>
+    <a name="yak-die"></a>
 </div>
 <a name="block2"></a>
 
@@ -139,6 +142,7 @@
             </ul>
         </div>
     </div>
+    <a name="formy"></a>
 </div>
 <a name="block4"></a>
 
