--- a/bioelektra/index-sport.html
+++ b/bioelektra/index-sport.html
@@ -81,6 +81,7 @@
         <div class="block-2__plate">Смачно! Має 2 смаки: апельсиновий, лимонний<sup>1</sup></div>
         <div class="block-2__plate">Можна приймати хворим на цукровий діабет<sup>1</sup></div>
     </div>
+    <a name="koly-prymaty"></a>
 </div>
 <a name="block1"></a>
 
@@ -117,6 +118,7 @@
             </div>
         </div>
     </div>
+    <a name="yak-die"></a>
 </div>
 <a name="block2"></a>
 
@@ -185,6 +187,7 @@
             </div>
         </div>
     </div>
+    <a name="formy"></a>
 </div>
 
 
