--- a/AlphaPharmaceutical/index-ru.html
+++ b/AlphaPharmaceutical/index-ru.html
@@ -13,9 +13,10 @@
 <body>
 
 <!--    start navigation-->
+<a name='top'></a>
 
     <div class="navigation-container">
-        <div class="logo-container"></div>
+        <a class="logo-container" href="#top"></a>
         <div class="navigation-menu">
             <a class="navmenu" href="#block-1" >УСЛУГИ</a>
             <a class="navmenu" href="#block-2">ПРЕИМУЩЕСТВА</a>
