--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -13,9 +13,9 @@
 <body>
 
 <!--    start navigation-->
-
+<a name='top'></a>
     <div class="navigation-container">
-        <div class="logo-container"></div>
+        <a class="logo-container" href="#top"></a>
         <div class="navigation-menu">
             <a class="navmenu" href="#block-1" >USŁUGI</a>
             <a class="navmenu" href="#block-2">Korzyści</a>
