--- a/influcid-RS/index.html
+++ b/influcid-RS/index.html
@@ -358,7 +358,7 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
               <div class="block-6__container-text"><p>Očekivana sezona kada se javljaju epidemije gripa je u jeku. Obratite pažnju da je razlika gripa i prehlade (drugih virusnih infekcija dišnih puteva) u tome što je uzročnik gripa jedan virus – virus gripa. Često se dešava da više varijacija ovog virusa izaziva grip. Uzrok prehlade su različiti virusi i do sada je detektovano čak 200 različitih virusa.</p>
                 <p>Šta možemo da očekujemo u sezoni 2019 – 2020?</p>
               </div>
-              <button class="accordion">saznajte više</button>
+              <button class="accordion">Saznajte više</button>
               <div class="panel">
                 <p>Prema izveštaju Svetske zdravstvene organizacije  tokom nove sezone epidemije u severnoj hemisferi virus gripa će biti aktivan u sledećim oblicima:</p>
                 <ul>
@@ -404,7 +404,7 @@ Pre i nakon upotrebe ne bi trebalo jesti i piti najmanje 30 minuta.
                 U toj situaciji je potrebno rešenje. Koji je najbolji lek za prehladu? Da li moguće brzo rešiti prehladu? Šta se može učiniti da se dečja prehlada brzo i bezbolno reši?
               </p>
               </div>
-              <button class="accordion">saznajte više</button>
+              <button class="accordion">Saznajte više</button>
               <div class="panel">
                 <p>Najveći broj prehlada se javlja kod dece od 6. meseca do 12 godine, u periodu intenzivnog razvoja imunog sistema. 
                     Za efikasno lečenje prehlade i drugih virusnih infekcija disajnih puteva potrebna je brza reakcija. Bitno je prepoznati prve simptome:</p>
