--- a/influcid-MN/index-en.html
+++ b/influcid-MN/index-en.html
@@ -416,7 +416,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
 
             <div class="block-7">
               <h2>WHERE TO BUY</h2>
-              <!-- <div class="block-7__img"></div> -->
+              <div class="block-7__img"></div>
               <div class="block-7__text">
                 <h3>Evidential base</h3>
                 <ol>
