--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -351,7 +351,7 @@
 
             <div class="block-7">
               <h2>ХААНААС ХУДАЛДАЖ АВАХ ВЭ</h2>
-              <!-- <div class="block-7__img"></div> -->
+              <div class="block-7__img"></div>
               <div class="block-7__text">
                 <h3>Нотлох баримтууд</h3>
                 <ol>
