--- a/AlphaPharmaceutical/index-en.html
+++ b/AlphaPharmaceutical/index-en.html
@@ -121,7 +121,7 @@
 
     <!--        mobile-->
 
-    <button class="accordion"><div class="acc-img"></div>Исследование конъюнктуры рынка</button>
+    <button class="accordion"><div class="acc-img"></div>Pharmaceutical market research</button>
     <div class="panel">
         <h3>Pharmaceutical market research in the European Union countries</h3>
         <ul>
