--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="header-text-mobile">
-        <p>Альфавизор(?) w sferze międzynarodowego doradztwa dla głównych graczy farmaceutycznych.</p>
+        <p>Alphavisor w sferze międzynarodowego doradztwa dla głównych graczy farmaceutycznych.</p>
         <p>Personalny asystent Twojego biznesu.</p>
     </div>
 <a name="block-1"></a>
@@ -138,7 +138,7 @@
 
 
 
-        <button class="accordion"><div class="acc-img acc-img2"></div>Бизнес сопровождение 360°</button>
+        <button class="accordion"><div class="acc-img acc-img2"></div>Asysta biznesowa  360 °</button>
         <div class="panel">
             <h3>Asysta biznesowa  360 °</h3>
             <ul>
