--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -62,7 +62,7 @@
         <div class="main-img-container"></div>
         <a name="block-1"></a>
         <p>
-          <b>Soyuqdəymə?</b> Seçim sənindir. <b>İnflyusid</b>
+          <b>Soyuqdəymə və zökəm?</b> Seçim sənindir. <b>İnflyusid</b>
         </p>
 
         <div class="header-block-2">
@@ -93,7 +93,7 @@
             Tez sağalmaq imkanı yaradır¹
           </p>
           <p>
-            Xəstə insanlarla təmasdan sonra xəstəliyin qarşısını alır
+            Təmas zamanı yoluxmanın qarşısını alır
           </p>
           <p>Keçirilmiş xəstəlikdən sonra qüvvəni bərpa edir¹</p>
         </div>
@@ -269,7 +269,7 @@
         </div>
         <div class="bottom-text__b">
           <b>
-            Həbləri ağızda tam əriyənədək asta-asta sormaq. 3 yaşadək uşaqlar üçün həbi az midarda mayedə həll etmək və ya xırdalanmış şəkildə, dilin altında vermək tövsiyə edilir. Preparatı yeməkdən yarım saat əvvəl və ya yarım saat sonra qəbul etməli.  
+            Həbləri ağızda tam əriyənədək asta-asta sormaq. 3 yaşadək uşaqlar üçün həbi az miqdarda mayedə həll etmək və ya əzilmiş şəkildə, dilin altında vermək tövsiyə edilir. Preparatı yeməkdən yarım saat əvvəl və ya yarım saat sonra qəbul etməli.  
           </b>
         </div>
         <a class="buy-btn pill-btn"><p>Де купити</p></a>
