--- a/neiroplant/index.html
+++ b/neiroplant/index.html
@@ -100,13 +100,13 @@
   <div class="disclamer">
     <b>Доказова база</b>
     <ol>
-      <li>
+      <!-- <li>
         Інструкція по застосуванню препарата: «Гастритол»
         Ткач С. М. Эмпирические подходы к диагностике и лечению функциональной диспепсии / С. М. Ткач // Семейная медицина. - 2014. - № 2. - С. 105-108.
-      </li>
+      </li> -->
     </ol>
     <p>
-      Tankred Wegener, Edgar Heimueller; Treatment of Mild Gastrointestinal Disorders with a Herbal Combination Results of a Non-interventional Study with Gastritol Liquid Published in Phytotherapy research : PTR 2016; DOI:10.1002/ptr.5502.
+      Нейроплант Р.П. МОЗ України UA/0414/01/01 від 02.01.2019. Реклама лікарського засобу. Відпускається без рецепту. Перед застосуванням уважно ознайомтесь з інструкцією для медичного застосування та проконсультуйтесь у лікаря.Зберігати у недоступному місці для дітей. Має протипоказання та побічні реакції. Виробник: Dr. Willmar Schwabe GmbH & Co. KG (Німеччина) Офіційний ексклюзивний дистрибютор в Україні: ПрАТ «Натурфарм»
     </p>
   </div>
 
