--- a/neiroplant/index.html
+++ b/neiroplant/index.html
@@ -98,7 +98,7 @@
 
 
   <div class="disclamer">
-    <b>Доказова база</b>
+    <!-- <b>Доказова база</b> -->
     <ol>
       <!-- <li>
         Інструкція по застосуванню препарата: «Гастритол»
