--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			<a href="influcid-KZ/index.html">influcid-KZ</a>
 			<a href="AlphaPharmaceutical/index.html">AlphaPharmaceutical</a>
 			<a href="influcid-MN/index.html">influcid-MN</a>
+			<a href="influcid-Romania/index.html">influcid-Romania</a>
+			
 		</section>
 	</main>
 
