--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 	a:nth-child(25)::before {
 		background: url("./influcid-MN/bg.png")no-repeat center / cover;
 	}
+	a:nth-child(26)::before {
+		background: url("./influcid-Romania/bg.png")no-repeat center / cover;
+	}
 </style>
 
 </body>
