--- a/Esberitoks/index_ru.html
+++ b/Esberitoks/index_ru.html
@@ -188,7 +188,7 @@
         <div class="treatment-img"></div>
         <h3 class="translated-text" key="g28">Дети от 4 до 6 лет</h3>
         <p class="translated-text" key="g29">3 раза в сутки по 1-2 таблетки.</p>
-        <button class="accordion">Детальнiше</button>
+        <button class="accordion">Подробнее</button>
         <div class="panel">
           <p>Таблетки запивать большим количеством жидкости, желательно водой или растворять в ротовой полости</p>
         </div>
@@ -197,7 +197,7 @@
         <div class="treatment-img"></div>
         <h3 class="translated-text" key="g30">Дети от 7 до 12 лет</h3>
         <p class="translated-text" key="g31">3 раза в сутки по 2-3 таблетки.</p>
-        <button class="accordion">Детальнiше</button>
+        <button class="accordion">Подробнее</button>
         <div class="panel">
           <p>Таблетки запивать большим количеством жидкости, желательно водой или растворять в ротовой полости</p>
         </div>
@@ -206,7 +206,7 @@
         <div class="treatment-img"></div>
         <h3 class="translated-text" key="g32">Взрослые и дети от 12 лет</h3>
         <p class="translated-text" key="g33">3 раза в сутки по 4-6 таблеток.</p>
-        <button class="accordion">Детальнiше</button>
+        <button class="accordion">Подробнее</button>
         <div class="panel">
           <p>Таблетки запивать большим количеством жидкости, желательно водой или растворять в ротовой полости</p>
         </div>
@@ -217,8 +217,8 @@
   <div class="useful">
     <h2 class="translated-text" key="g34"><b>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</b></h2>
     <div class="useful-container">
-      <a href="symptom1_ru.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
-      <a href="symptom2_ru.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
+      <a href="symptom1_ru.html">ГРИПП И ПРОСТУДА У ВЗРОСЛЫХ</a>
+      <a href="symptom2_ru.html">ГРИПП И ПРОСТУДА У ДЕТЕЙ</a>
       <a href="symptom3_ru.html">БРОНХИТ</a>
 <!--      <a href="symptom4.html">АНГИНА</a>-->
       <a href="symptom5_ru.html">ГАЙМОРИТ</a>
@@ -234,7 +234,7 @@
 
 
   <div class="disclamer">
-    <h2><b>Доказательная база</b></h2>
+    <h2><b>ДОКАЗАТЕЛЬНАЯ БАЗА</b></h2>
 
     <ol>
       <li>
