--- a/Esberitoks/symptom2_ru.html
+++ b/Esberitoks/symptom2_ru.html
@@ -89,8 +89,8 @@
   <p>Его компоненты, как и сам препарат, хорошо изучены, проверены и исследованы. В основных выводах исследований (обозначенные цифрами внизу статьи) видно, что прием Эсберитокса облегчает проявления простуды, ускоряет выздоровление на 2-3 дня<sup>1</sup>, помогает минимизировать осложнения, которые требуют приема антибиотиков<sup>2</sup></p>
   <p>Помимо того, что дети болеют чаще, чем взрослые, они еще и более склонны к развитию бронхообструктивного синдрома. Так называется состояние, когда у ребенка на фоне ОРВИ появляется тяжелое шумное дыхание, хрипы, удлиненный выдох. Этому способствуют анатомически узкие дыхательные пути у детей, которые еще больше сужаются из-за спазма и отека слизистой оболочки бронхов, вызванных ОРВИ.
   </p>
-  <p>Исследования доказывают эффективность использования препарата Эсберитокс у таких детей. Например, детки, которые часто болеют, и склонны к проявлениям обструкции бронхов во время ОРВИ, после лечения препаратом Эсбериток болели вдвое меньше, а проявления обструкции бронхов случались в три раза реже<sup>3</sup> .</p>
-  <p>Как правило, повышенная заболеваемость ОРВИ наблюдается с середины сентября. Как и в случае с любыми другими лекарственными средствами, схему, дозировку и длительность курса лечения нужно согласовать со своим педиатром. Желаем Вам та Вашим деткам сверхкрепкого здоровья и очень стойкого иммунитета.
+  <p>Исследования доказывают эффективность использования препарата Эсберитокс у таких детей. Например, детки, которые часто болеют, и склонны к проявлениям обструкции бронхов во время ОРВИ, после лечения препаратом Эсберитокс болели вдвое меньше, а проявления обструкции бронхов случались в три раза реже<sup>3</sup> .</p>
+  <p>Как правило, повышенная заболеваемость ОРВИ наблюдается с середины сентября. Как и в случае с любыми другими лекарственными средствами, схему, дозировку и длительность курса лечения нужно согласовать со своим педиатром. Желаем Вам и Вашим деткам сверхкрепкого здоровья и очень стойкого иммунитета.
   </p>
   <div class="symptom-container__product">
     <div class="product__img"></div>
