--- a/Esberitoks/symptom3.html
+++ b/Esberitoks/symptom3.html
@@ -79,8 +79,8 @@
       <p>Вірусів, які викликають застуду, дуже багато – їх вже нараховують більше ніж 400, і кожного року завдяки старанням вчених стає відомо про все нові й нові віруси. </p>
       <p>Кожний вид вірусів має свої «улюблені» місця в дихальних шляхах. Це може бути слизова оболонка носа, і тоді застуду супроводжують закладеність носа і сильний нежить. Інші віруси викликають запалення горла та мигдаликів. Деякі віруси «полюбляють» епітелій бронхів, і спричиняють захворювання, яке називається бронхіт. </p>
     <p>Гострий бронхіт проявляється сухим кашлем, який за кілька днів може стати вологим, бо почала утворюватися мокрота. Інколи, окрім кашлю, болить у грудній клітині, турбує задишка та хрипи.</p>
-    <p>У 90-92% випадків причиною гострого бронхіту є вірусна інфекція. Тому, згідно з останніми рекомендаціями фахівців1, використовувати антибіотики для лікування гострого бронхіту на фоні ГРВІ не має сенсу, адже антибіотики не діють на віруси.
-      Допоможе застосування німецького рослинного препарату Есберітокс у  комплексному лікуванні застуди. При лікуванні Есберітоксом звичайної застуди одужання настає на 2-3 дні швидше2.  Якщо на фоні ГРВІ виник гострий бронхіт, препарат Есберітокс варто приймати протягом 10 днів. Це зменшить ризик бактеріальних ускладнень3 (виникнення бактеріального бронхіту).
+    <p>У 90-92% випадків причиною гострого бронхіту є вірусна інфекція. Тому, згідно з останніми рекомендаціями фахівців<sup>1</sup>, використовувати антибіотики для лікування гострого бронхіту на фоні ГРВІ не має сенсу, адже антибіотики не діють на віруси.
+      Допоможе застосування німецького рослинного препарату Есберітокс у  комплексному лікуванні застуди. При лікуванні Есберітоксом звичайної застуди одужання настає на 2-3 дні швидше<sup>2</sup>.  Якщо на фоні ГРВІ виник гострий бронхіт, препарат Есберітокс варто приймати протягом 10 днів. Це зменшить ризик бактеріальних ускладнень<sup>3</sup> (виникнення бактеріального бронхіту).
       І пам’ятайте, що своєчасне лікування застуди та ГРВІ із застосуванням Есберітоксу допоможе пережити сезон застуд без необхідності лікувати бронхіт.
     </p>
       <div class="symptom-container__product">
