--- a/Esberitoks/symptom3_ru.html
+++ b/Esberitoks/symptom3_ru.html
@@ -86,7 +86,7 @@
   <p>Острый бронхит проявляется сухим кашлем. За несколько дней может превратиться во влажный, так как начинает появляться мокрота. Иногда, кроме кашля, болит в грудной клетке, беспокоит одышка и хрипы.</p>
   <p>У 90-92% случаев причиной острого бронхита является вирусная инфекция. Поэтому, согласно последним рекомендациям специалистов<sup>1</sup>, применение антибиотиков для лечения острого бронхита на фоне ОРВИ не имеет смысла, ведь антибиотики не воздействуют на вирусы.
   </p>
-  <p>А вот применение противовирусных препаратов поможет, например, препарат Эсберитокс. Растительный немецкий препарат в  комплексном лечении простуды. При лечении Эсберитоксом обычной простуды выздоровление наступает на 2-3 дня быстрее2.  Если на фоне ОРВИ возник острый бронхит, препарат Эсберитокс стоит принимать курсом 10 дней. Это уменьшает риск бактериальных осложнений3 (возникновение бактериального бронхита).
+  <p>А вот применение противовирусных препаратов поможет, например, препарат Эсберитокс. Растительный немецкий препарат в  комплексном лечении простуды. При лечении Эсберитоксом обычной простуды выздоровление наступает на 2-3 дня быстрее<sup>2</sup>.  Если на фоне ОРВИ возник острый бронхит, препарат Эсберитокс стоит принимать курсом 10 дней. Это уменьшает риск бактериальных осложнений<sup>3</sup> (возникновение бактериального бронхита).
   </p>
   <p>И помните, что своевременное лечение простуды и ОРВИ с использованием препарата Эсберитокс поможет пережить сезон простуд, избежав необходимости лечить бронхит.
   </p>
@@ -105,11 +105,11 @@
 <div class="useful">
   <h2 class="translated-text" key="g34"><b>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</b></h2>
   <div class="useful-container">
-    <a href="symptom1_ru.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
-    <a href="symptom2_ru.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
-    <a href="symptom3_ru.html">Бронхіт</a>
-    <!--    <a href="symptom4.html">Ангіна</a>-->
-    <a href="symptom5_ru.html">Гайморит</a>
+    <a href="symptom1_ru.html">ГРИПП И ПРОСТУДА У ВЗРОСЛЫХ</a>
+    <a href="symptom2_ru.html">ГРИПП И ПРОСТУДА У ДЕТЕЙ</a>
+    <a href="symptom3_ru.html">БРОНХИТ</a>
+<!--      <a href="symptom4.html">АНГИНА</a>-->
+      <a href="symptom5_ru.html">ГАЙМОРИТ</a>
     <!--      <a href="symptom6.html">Герпес</a>-->
     <!--      <a href="symptom7.html">Зміцнення імунітету</a>-->
   </div>
@@ -122,7 +122,7 @@
 
 
 <div class="disclamer">
-  <h2><b>Доказова база</b></h2>
+  <h2><b>ДОКАЗАТЕЛЬНАЯ БАЗА</b></h2>
 
   <ol>
     <li>
