--- a/Esberitoks/symptom5_ru.html
+++ b/Esberitoks/symptom5_ru.html
@@ -104,11 +104,11 @@
 <div class="useful">
   <h2 class="translated-text" key="g34"><b>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</b></h2>
   <div class="useful-container">
-    <a href="symptom1_ru.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
-    <a href="symptom2_ru.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
-    <a href="symptom3_ru.html">Бронхіт</a>
-    <!--    <a href="symptom4.html">Ангіна</a>-->
-    <a href="symptom5_ru.html">Гайморит</a>
+    <a href="symptom1_ru.html">ГРИПП И ПРОСТУДА У ВЗРОСЛЫХ</a>
+    <a href="symptom2_ru.html">ГРИПП И ПРОСТУДА У ДЕТЕЙ</a>
+    <a href="symptom3_ru.html">БРОНХИТ</a>
+<!--      <a href="symptom4.html">АНГИНА</a>-->
+      <a href="symptom5_ru.html">ГАЙМОРИТ</a>
     <!--      <a href="symptom6.html">Герпес</a>-->
     <!--      <a href="symptom7.html">Зміцнення імунітету</a>-->
   </div>
@@ -121,7 +121,7 @@
 
 
 <div class="disclamer">
-  <h2><b>Доказова база</b></h2>
+  <h2><b>ДОКАЗАТЕЛЬНАЯ БАЗА</b></h2>
 
   <ol>
     <li>
