--- a/Esberitoks/symptom7_ru.html
+++ b/Esberitoks/symptom7_ru.html
@@ -62,6 +62,8 @@
 
 <!--  content-->
 
+<a class="fixed-link" href="https://liki24.com/?route=checkout%2Fcustom_cart&cart_id=42740&utm_source=Esberitox-1&utm_medium=referral&utm_campaign=Esberitox">заказать доставку</a>
+
   <div class="header-custom header-custom-symptom">
       <div class="header-custom__herp">
 
