--- a/Esberitoks/index_ru.html
+++ b/Esberitoks/index_ru.html
@@ -88,7 +88,7 @@
 <!--  start overrun-->
 
 
-<a class="fixed-link" href="">заказать доставку</a>
+<a class="fixed-link" href="https://liki24.com/?route=checkout%2Fcustom_cart&cart_id=42740&utm_source=Esberitox-1&utm_medium=referral&utm_campaign=Esberitox">заказать доставку</a>
 
 
   <div class="overrun-container">
