--- a/Esberitoks/symptom2_ru.html
+++ b/Esberitoks/symptom2_ru.html
@@ -62,6 +62,8 @@
 
 <!--  content-->
 
+<a class="fixed-link" href="https://liki24.com/?route=checkout%2Fcustom_cart&cart_id=42740&utm_source=Esberitox-1&utm_medium=referral&utm_campaign=Esberitox">заказать доставку</a>
+
 <div class="header-custom header-custom-symptom">
   <div class="header-custom__baby-flu">
 
@@ -106,11 +108,11 @@
 <div class="useful">
   <h2 class="translated-text" key="g34"><b>ПОЛЕЗНАЯ ИНФОРМАЦИЯ</b></h2>
   <div class="useful-container">
-    <a href="symptom1_ru.html">ГРИП И ПРОСТУДА У ВЗРОСЛЫХ</a>
-    <a href="symptom2_ru.html">ГРИП И ПРОСТУДА У ДЕТЕЙ</a>
-    <a href="symptom3_ru.html">Бронхіт</a>
-    <!--    <a href="symptom4.html">Ангіна</a>-->
-    <a href="symptom5_ru.html">Гайморит</a>
+    <a href="symptom1_ru.html">ГРИПП И ПРОСТУДА У ВЗРОСЛЫХ</a>
+    <a href="symptom2_ru.html">ГРИПП И ПРОСТУДА У ДЕТЕЙ</a>
+    <a href="symptom3_ru.html">БРОНХИТ</a>
+<!--      <a href="symptom4.html">АНГИНА</a>-->
+      <a href="symptom5_ru.html">ГАЙМОРИТ</a>
     <!--      <a href="symptom6.html">Герпес</a>-->
     <!--      <a href="symptom7.html">Зміцнення імунітету</a>-->
   </div>
