--- a/influcid-AZ/index.html
+++ b/influcid-AZ/index.html
@@ -93,7 +93,7 @@
             Tez sağalmaq imkanı yaradır¹
           </p>
           <p>
-            Təmas zamanı yoluxmanın qarşısını alır
+            Xəstə insanlarla təmas zamanı yoluxmanın qarşısını alır
           </p>
           <p>Keçirilmiş xəstəlikdən sonra qüvvəni bərpa edir¹</p>
         </div>
