--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<a href="AlphaPharmaceutical/index.html">AlphaPharmaceutical</a>
 			<a href="influcid-MN/index.html">influcid-MN</a>
 			<a href="influcid-Romania/index.html">influcid-Romania</a>
+			<a href="influcid-Moldova/index.html">influcid-Moldova</a>
 			
 		</section>
 	</main>
@@ -148,6 +149,9 @@
 	}
 	a:nth-child(26)::before {
 		background: url("./influcid-Romania/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(27)::before {
+		background: url("./influcid-Moldova/bg.png")no-repeat center / cover;
 	}
 </style>
 
