--- a/AlphaPharmaceutical/index.html
+++ b/AlphaPharmaceutical/index.html
@@ -226,14 +226,14 @@
             <h2>Formularz kontaktowy</h2>
 
         </div>
-        <form>
+        <form action="./send.php" method="POST">
             <div class="form-top">
-                <input class="inp-name" type="text" placeholder="Imię" required>
-                <input class="inp-email" type="email" id="email" placeholder="E-mail"
+                <input class="inp-name" id="name" type="text" placeholder="Imię" required>
+                <input class="inp-email" type="email" id="messanger-contact" placeholder="E-mail"
                         required>
             </div>
             <div class="inp-text">
-                <input class="form-text" type="text" placeholder="Wiadomość" required>
+                <input class="form-text" id="message" type="text" placeholder="Wiadomość" required>
             </div>
             <button>Wyślij</button>
         </form>
